# zero2prod

./: Cargo.toml
migrations/: 20230513205731_create_subscriptions_table.sql
scripts/: init_db.sh  init_pgadmin.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
